--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,17 @@
         android:theme="@style/Theme.D308"
         tools:targetApi="31">
         <activity
+            android:name=".UI.VacationDetails"
+            android:exported="false"
+        android:label="Vacation Details" />
+        <activity
             android:name=".UI.VacationList"
-            android:label="Vacation List"
-            android:exported="false" />
+            android:exported="false"
+            android:label="Vacation List" />
         <activity
             android:name=".UI.MainActivity"
-            android:label="Main Activity"
-            android:exported="true">
+            android:exported="true"
+            android:label="Main Activity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
