--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,12 @@
         tools:targetApi="31">
         <activity
             android:name=".UI.VacationDetails"
+            android:parentActivityName=".UI.VacationList"
             android:exported="false"
         android:label="Vacation Details" />
         <activity
             android:name=".UI.VacationList"
+            android:parentActivityName=".UI.MainActivity"
             android:exported="false"
             android:label="Vacation List" />
         <activity
