--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,15 +13,20 @@
         android:theme="@style/Theme.D308"
         tools:targetApi="31">
         <activity
+            android:name=".UI.ExcursionDetails"
+            android:label="Excursion Details"
+            android:parentActivityName=".UI.VacationDetails"
+            android:exported="false" />
+        <activity
             android:name=".UI.VacationDetails"
-            android:parentActivityName=".UI.VacationList"
             android:exported="false"
-        android:label="Vacation Details" />
+            android:label="Vacation Details"
+            android:parentActivityName=".UI.VacationList" />
         <activity
             android:name=".UI.VacationList"
-            android:parentActivityName=".UI.MainActivity"
             android:exported="false"
-            android:label="Vacation List" />
+            android:label="Vacation List"
+            android:parentActivityName=".UI.MainActivity" />
         <activity
             android:name=".UI.MainActivity"
             android:exported="true"
